--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,18 @@
-# Python-related files
-*.py[cod]
+# Python
 __pycache__/
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+*.py[cod]
 
-# Virtual environment
-.env
-.venv
-env/
+# Virtual Environment
 .venv/
-ENV/
 
 # Django
 *.log
-*.pot
-*.pyc
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media/
 static/
 
-# If using celery
-celerybeat-schedule
-celerybeat.pid
-
-# IDE and editor files
-.idea/
+# IDE
 .vscode/
-*.swp
-*.swo
-*~
-.project
-.pydevproject
-.settings/
-
-# Coverage and test files
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.pytest_cache/
-
-# Documentation
-docs/_build/
-docs/build/
-
-# Backup files
-*.bak
+.idea/
